--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cat",
   "version": "0.0.1",
   "description": "fish!",
-  "main": "index.js",
+  "main": "dist/main.js",
   "license": "MIT",
   "dependencies": {
     "@babel/cli": "^7.0.0-beta.39",
@@ -12,6 +12,7 @@
     "@babel/preset-flow": "^7.0.0-beta.38",
     "@babel/preset-react": "^7.0.0-beta.38",
     "babel-loader": "8.0.0-beta.0",
+    "electron": "^1.7.11",
     "flow-bin": "^0.64.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -22,6 +23,8 @@
     "babel": "babel",
     "build": "webpack-cli --mode production",
     "build:dev": "webpack-cli --mode development",
-    "webpack": "webpack-cli"
+    "watch": "webpack-cli --mode development --watch",
+    "webpack": "webpack-cli",
+    "electron": "electron ."
   }
 }
