--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@babel/preset-flow": "^7.0.0-beta.38",
     "@babel/preset-react": "^7.0.0-beta.38",
     "babel-loader": "8.0.0-beta.0",
+    "draft-js": "^0.10.5",
     "electron": "^1.7.11",
     "flow-bin": "^0.64.0",
     "react": "^16.2.0",
