--- a/utils/bpm-counter/package.json
+++ b/utils/bpm-counter/package.json
@@ -8,17 +8,7 @@
     "react": "^16.3.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.46",
-    "@babel/core": "^7.0.0-beta.46",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta.46",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0-beta.46",
-    "@babel/plugin-transform-classes": "^7.0.0-beta.46",
-    "@babel/plugin-transform-destructuring": "^7.0.0-beta.46",
-    "@babel/plugin-transform-react-constant-elements": "^7.0.0-beta.46",
-    "@babel/plugin-transform-react-display-name": "^7.0.0-beta.46",
-    "@babel/preset-env": "^7.0.0-beta.46",
-    "@babel/preset-flow": "^7.0.0-beta.46",
-    "@babel/preset-react": "^7.0.0-beta.46"
+    "@nsfmc/babel-preset-sketching": "1.0.0"
   },
   "scripts": {
     "build": "babel src/index.js -o index.js"
