--- a/electrocat/package.json
+++ b/electrocat/package.json
@@ -5,12 +5,7 @@
   "main": "dist/main.js",
   "license": "MIT",
   "dependencies": {
-    "@babel/cli": "^7.0.0-beta",
-    "@babel/core": "^7.0.0-beta",
-    "@babel/plugin-proposal-class-properties": "^7.0.0-beta",
-    "@babel/preset-env": "^7.0.0-beta",
-    "@babel/preset-flow": "^7.0.0-beta",
-    "@babel/preset-react": "^7.0.0-beta",
+    "@nsfmc/babel-preset-sketching": "1.0.0",
     "babel-loader": "8.0.0-beta.4",
     "draft-js": "^0.10.5",
     "electron": "^1.7.11",
